@@ -28,14 +28,12 @@ import org.apache.kafka.coordinator.group.generated.ConsumerGroupMemberMetadataV
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupPartitionMetadataKey;
-import org.apache.kafka.coordinator.group.generated.ConsumerGroupPartitionMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupRegularExpressionKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupRegularExpressionValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMemberKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMemberValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupTargetAssignmentMetadataValue;
-import org.apache.kafka.coordinator.group.generated.CoordinatorRecordType;
 import org.apache.kafka.coordinator.group.generated.GroupMetadataKey;
 import org.apache.kafka.coordinator.group.generated.GroupMetadataValue;
 import org.apache.kafka.coordinator.group.generated.OffsetCommitKey;
@@ -48,6 +46,8 @@ import org.apache.kafka.coordinator.group.generated.ShareGroupMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ShareGroupPartitionMetadataKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupPartitionMetadataValue;
+import org.apache.kafka.coordinator.group.generated.ShareGroupStatePartitionMetadataKey;
+import org.apache.kafka.coordinator.group.generated.ShareGroupStatePartitionMetadataValue;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMemberKey;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMemberValue;
 import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMetadataKey;
@@ -55,9 +55,9 @@ import org.apache.kafka.coordinator.group.generated.ShareGroupTargetAssignmentMe
 import org.apache.kafka.coordinator.group.modern.TopicMetadata;
 import org.apache.kafka.coordinator.group.modern.consumer.ConsumerGroupMember;
 import org.apache.kafka.coordinator.group.modern.consumer.ResolvedRegularExpression;
+import org.apache.kafka.coordinator.group.modern.share.ShareGroup.InitMapValue;
 import org.apache.kafka.coordinator.group.modern.share.ShareGroupMember;
 import org.apache.kafka.server.common.ApiMessageAndVersion;
-import org.apache.kafka.server.common.MetadataVersion;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -70,6 +70,9 @@ import java.util.Set;
  * the __consumer_offsets topic.
  */
 public class GroupCoordinatorRecordHelpers {
+
+    private static final short GROUP_METADATA_VALUE_VERSION = 3;
+
     private GroupCoordinatorRecordHelpers() {}
 
     /**
@@ -85,13 +88,10 @@ public class GroupCoordinatorRecordHelpers {
     ) {
         List<String> topicNames = new ArrayList<>(member.subscribedTopicNames());
         Collections.sort(topicNames);
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.CONSUMER_GROUP_MEMBER_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ConsumerGroupMemberMetadataValue()
                     .setRackId(member.rackId())
@@ -119,47 +119,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_MEMBER_METADATA.id()
-            ),
-            null // Tombstone.
-        );
-    }
-
-    /**
-     * Creates a ConsumerGroupPartitionMetadata record.
-     *
-     * @param groupId                   The consumer group id.
-     * @param newSubscriptionMetadata   The subscription metadata.
-     * @return The record.
-     */
-    public static CoordinatorRecord newConsumerGroupSubscriptionMetadataRecord(
-        String groupId,
-        Map<String, TopicMetadata> newSubscriptionMetadata
-    ) {
-        ConsumerGroupPartitionMetadataValue value = new ConsumerGroupPartitionMetadataValue();
-        newSubscriptionMetadata.forEach((topicName, topicMetadata) ->
-            value.topics().add(new ConsumerGroupPartitionMetadataValue.TopicMetadata()
-                .setTopicId(topicMetadata.id())
-                .setTopicName(topicMetadata.name())
-                .setNumPartitions(topicMetadata.numPartitions())
-            )
-        );
-
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_PARTITION_METADATA.id()
-            ),
-            new ApiMessageAndVersion(
-                value,
-                (short) 0
-            )
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -172,13 +135,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newConsumerGroupSubscriptionMetadataTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_PARTITION_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupPartitionMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -187,21 +146,21 @@ public class GroupCoordinatorRecordHelpers {
      *
      * @param groupId       The consumer group id.
      * @param newGroupEpoch The consumer group epoch.
+     * @param metadataHash  The consumer group metadata hash.
      * @return The record.
      */
     public static CoordinatorRecord newConsumerGroupEpochRecord(
         String groupId,
-        int newGroupEpoch
+        int newGroupEpoch,
+        long metadataHash
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ConsumerGroupMetadataValue()
-                    .setEpoch(newGroupEpoch),
+                    .setEpoch(newGroupEpoch)
+                    .setMetadataHash(metadataHash),
                 (short) 0
             )
         );
@@ -216,13 +175,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newConsumerGroupEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -250,13 +205,10 @@ public class GroupCoordinatorRecordHelpers {
             );
         }
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId),
             new ApiMessageAndVersion(
                 new ConsumerGroupTargetAssignmentMemberValue()
                     .setTopicPartitions(topicPartitions),
@@ -276,14 +228,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -298,12 +246,9 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         int assignmentEpoch
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ConsumerGroupTargetAssignmentMetadataValue()
                     .setAssignmentEpoch(assignmentEpoch),
@@ -321,13 +266,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newConsumerGroupTargetAssignmentEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.CONSUMER_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -342,13 +283,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         ConsumerGroupMember member
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.CONSUMER_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ConsumerGroupCurrentMemberAssignmentValue()
                     .setMemberEpoch(member.memberEpoch())
@@ -372,14 +310,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.CONSUMER_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
-            null // Tombstone
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -399,13 +333,10 @@ public class GroupCoordinatorRecordHelpers {
         List<String> topics = new ArrayList<>(resolvedRegularExpression.topics);
         Collections.sort(topics);
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupRegularExpressionKey()
-                    .setGroupId(groupId)
-                    .setRegularExpression(regex),
-                CoordinatorRecordType.CONSUMER_GROUP_REGULAR_EXPRESSION.id()
-            ),
+        return CoordinatorRecord.record(
+            new ConsumerGroupRegularExpressionKey()
+                .setGroupId(groupId)
+                .setRegularExpression(regex),
             new ApiMessageAndVersion(
                 new ConsumerGroupRegularExpressionValue()
                     .setTopics(topics)
@@ -427,14 +358,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String regex
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ConsumerGroupRegularExpressionKey()
-                    .setGroupId(groupId)
-                    .setRegularExpression(regex),
-                CoordinatorRecordType.CONSUMER_GROUP_REGULAR_EXPRESSION.id()
-            ),
-            null // Tombstone
+        return CoordinatorRecord.tombstone(
+            new ConsumerGroupRegularExpressionKey()
+                .setGroupId(groupId)
+                .setRegularExpression(regex)
         );
     }
 
@@ -443,13 +370,11 @@ public class GroupCoordinatorRecordHelpers {
      *
      * @param group              The classic group.
      * @param assignment         The classic group assignment.
-     * @param metadataVersion    The metadata version.
      * @return The record.
      */
     public static CoordinatorRecord newGroupMetadataRecord(
         ClassicGroup group,
-        Map<String, byte[]> assignment,
-        MetadataVersion metadataVersion
+        Map<String, byte[]> assignment
     ) {
         List<GroupMetadataValue.MemberMetadata> members = new ArrayList<>(group.allMembers().size());
         group.allMembers().forEach(member -> {
@@ -477,12 +402,9 @@ public class GroupCoordinatorRecordHelpers {
             );
         });
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup(group.groupId()),
-                CoordinatorRecordType.GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new GroupMetadataKey()
+                .setGroup(group.groupId()),
             new ApiMessageAndVersion(
                 new GroupMetadataValue()
                     .setProtocol(group.protocolName().orElse(null))
@@ -491,7 +413,7 @@ public class GroupCoordinatorRecordHelpers {
                     .setLeader(group.leaderOrNull())
                     .setCurrentStateTimestamp(group.currentStateTimestampOrDefault())
                     .setMembers(members),
-                metadataVersion.groupMetadataValueVersion()
+                GROUP_METADATA_VALUE_VERSION
             )
         );
     }
@@ -505,13 +427,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newGroupMetadataTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup(groupId),
-                CoordinatorRecordType.GROUP_METADATA.id()
-            ),
-            null // Tombstone
+        return CoordinatorRecord.tombstone(
+            new GroupMetadataKey()
+                .setGroup(groupId)
         );
     }
 
@@ -519,19 +437,14 @@ public class GroupCoordinatorRecordHelpers {
      * Creates an empty GroupMetadata record.
      *
      * @param group              The classic group.
-     * @param metadataVersion    The metadata version.
      * @return The record.
      */
     public static CoordinatorRecord newEmptyGroupMetadataRecord(
-        ClassicGroup group,
-        MetadataVersion metadataVersion
+        ClassicGroup group
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new GroupMetadataKey()
-                    .setGroup(group.groupId()),
-                CoordinatorRecordType.GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new GroupMetadataKey()
+                .setGroup(group.groupId()),
             new ApiMessageAndVersion(
                 new GroupMetadataValue()
                     .setProtocol(null)
@@ -539,8 +452,8 @@ public class GroupCoordinatorRecordHelpers {
                     .setGeneration(0)
                     .setLeader(null)
                     .setCurrentStateTimestamp(group.currentStateTimestampOrDefault())
-                    .setMembers(Collections.emptyList()),
-                metadataVersion.groupMetadataValueVersion()
+                    .setMembers(List.of()),
+                GROUP_METADATA_VALUE_VERSION
             )
         );
     }
@@ -552,26 +465,21 @@ public class GroupCoordinatorRecordHelpers {
      * @param topic             The topic name.
      * @param partitionId       The partition id.
      * @param offsetAndMetadata The offset and metadata.
-     * @param metadataVersion   The metadata version.
      * @return The record.
      */
     public static CoordinatorRecord newOffsetCommitRecord(
         String groupId,
         String topic,
         int partitionId,
-        OffsetAndMetadata offsetAndMetadata,
-        MetadataVersion metadataVersion
+        OffsetAndMetadata offsetAndMetadata
     ) {
-        short version = metadataVersion.offsetCommitValueVersion(offsetAndMetadata.expireTimestampMs.isPresent());
+        short version = offsetCommitValueVersion(offsetAndMetadata.expireTimestampMs.isPresent());
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new OffsetCommitKey()
-                    .setGroup(groupId)
-                    .setTopic(topic)
-                    .setPartition(partitionId),
-                CoordinatorRecordType.OFFSET_COMMIT.id()
-            ),
+        return CoordinatorRecord.record(
+            new OffsetCommitKey()
+                .setGroup(groupId)
+                .setTopic(topic)
+                .setPartition(partitionId),
             new ApiMessageAndVersion(
                 new OffsetCommitValue()
                     .setOffset(offsetAndMetadata.committedOffset)
@@ -579,10 +487,19 @@ public class GroupCoordinatorRecordHelpers {
                     .setMetadata(offsetAndMetadata.metadata)
                     .setCommitTimestamp(offsetAndMetadata.commitTimestampMs)
                     // Version 1 has a non-empty expireTimestamp field
-                    .setExpireTimestamp(offsetAndMetadata.expireTimestampMs.orElse(OffsetCommitRequest.DEFAULT_TIMESTAMP)),
+                    .setExpireTimestamp(offsetAndMetadata.expireTimestampMs.orElse(OffsetCommitRequest.DEFAULT_TIMESTAMP))
+                    .setTopicId(offsetAndMetadata.topicId),
                 version
             )
         );
+    }
+
+    static short offsetCommitValueVersion(boolean expireTimestampMs) {
+        if (expireTimestampMs) {
+            return 1;
+        } else {
+            return  4;
+        }
     }
 
     /**
@@ -598,15 +515,11 @@ public class GroupCoordinatorRecordHelpers {
         String topic,
         int partitionId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new OffsetCommitKey()
-                    .setGroup(groupId)
-                    .setTopic(topic)
-                    .setPartition(partitionId),
-                CoordinatorRecordType.OFFSET_COMMIT.id()
-            ),
-            null
+        return CoordinatorRecord.tombstone(
+            new OffsetCommitKey()
+                .setGroup(groupId)
+                .setTopic(topic)
+                .setPartition(partitionId)
         );
     }
 
@@ -623,13 +536,10 @@ public class GroupCoordinatorRecordHelpers {
     ) {
         List<String> topicNames = new ArrayList<>(member.subscribedTopicNames());
         Collections.sort(topicNames);
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.SHARE_GROUP_MEMBER_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ShareGroupMemberMetadataValue()
                     .setRackId(member.rackId())
@@ -652,14 +562,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMemberMetadataKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_MEMBER_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupMemberMetadataKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -683,12 +589,9 @@ public class GroupCoordinatorRecordHelpers {
             )
         );
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_PARTITION_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupPartitionMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 value,
                 (short) 0
@@ -705,13 +608,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newShareGroupSubscriptionMetadataTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupPartitionMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_PARTITION_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupPartitionMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -720,21 +619,21 @@ public class GroupCoordinatorRecordHelpers {
      *
      * @param groupId       The group id.
      * @param newGroupEpoch The group epoch.
+     * @param metadataHash  The group metadata hash.
      * @return The record.
      */
     public static CoordinatorRecord newShareGroupEpochRecord(
         String groupId,
-        int newGroupEpoch
+        int newGroupEpoch,
+        long metadataHash
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ShareGroupMetadataValue()
-                    .setEpoch(newGroupEpoch),
+                    .setEpoch(newGroupEpoch)
+                    .setMetadataHash(metadataHash),
                 (short) 0
             )
         );
@@ -749,13 +648,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newShareGroupEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -783,13 +678,10 @@ public class GroupCoordinatorRecordHelpers {
             );
         }
 
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId),
             new ApiMessageAndVersion(
                 new ShareGroupTargetAssignmentMemberValue()
                     .setTopicPartitions(topicPartitions),
@@ -809,14 +701,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMemberKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_MEMBER.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupTargetAssignmentMemberKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
         );
     }
 
@@ -831,12 +719,9 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         int assignmentEpoch
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
                 new ShareGroupTargetAssignmentMetadataValue()
                     .setAssignmentEpoch(assignmentEpoch),
@@ -854,13 +739,9 @@ public class GroupCoordinatorRecordHelpers {
     public static CoordinatorRecord newShareGroupTargetAssignmentEpochTombstoneRecord(
         String groupId
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupTargetAssignmentMetadataKey()
-                    .setGroupId(groupId),
-                CoordinatorRecordType.SHARE_GROUP_TARGET_ASSIGNMENT_METADATA.id()
-            ),
-            null // Tombstone.
+        return CoordinatorRecord.tombstone(
+            new ShareGroupTargetAssignmentMetadataKey()
+                .setGroupId(groupId)
         );
     }
 
@@ -875,13 +756,10 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         ShareGroupMember member
     ) {
-        return new CoordinatorRecord(
-            new ApiMessageAndVersion(
-                new ShareGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(member.memberId()),
-                CoordinatorRecordType.SHARE_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
+        return CoordinatorRecord.record(
+            new ShareGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(member.memberId()),
             new ApiMessageAndVersion(
                 new ShareGroupCurrentMemberAssignmentValue()
                     .setMemberEpoch(member.memberEpoch())
@@ -904,14 +782,72 @@ public class GroupCoordinatorRecordHelpers {
         String groupId,
         String memberId
     ) {
-        return new CoordinatorRecord(
+        return CoordinatorRecord.tombstone(
+            new ShareGroupCurrentMemberAssignmentKey()
+                .setGroupId(groupId)
+                .setMemberId(memberId)
+        );
+    }
+
+    /**
+     * Creates a ShareGroupStatePartitionMetadata tombstone.
+     *
+     * @param groupId   The share group id.
+     * @return The record.
+     */
+    public static CoordinatorRecord newShareGroupStatePartitionMetadataTombstoneRecord(
+        String groupId
+    ) {
+        return CoordinatorRecord.tombstone(
+            new ShareGroupStatePartitionMetadataKey()
+                .setGroupId(groupId)
+        );
+    }
+
+    /**
+     * Creates a ShareGroupStatePartitionMetadata record.
+     *
+     * @param groupId   The share group id.
+     * @param initializedTopics  Topics which have been initialized.
+     * @param deletingTopics  Topics which are being deleted.
+     * @return The record.
+     */
+    public static CoordinatorRecord newShareGroupStatePartitionMetadataRecord(
+        String groupId,
+        Map<Uuid, InitMapValue> initializingTopics,
+        Map<Uuid, InitMapValue> initializedTopics,
+        Map<Uuid, String> deletingTopics
+    ) {
+        List<ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo> initializingTopicPartitionInfo = initializingTopics.entrySet().stream()
+            .map(entry -> new ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo()
+                .setTopicId(entry.getKey())
+                .setTopicName(entry.getValue().name())
+                .setPartitions(entry.getValue().partitions().stream().toList()))
+            .toList();
+
+        List<ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo> initializedTopicPartitionInfo = initializedTopics.entrySet().stream()
+            .map(entry -> new ShareGroupStatePartitionMetadataValue.TopicPartitionsInfo()
+                .setTopicId(entry.getKey())
+                .setTopicName(entry.getValue().name())
+                .setPartitions(entry.getValue().partitions().stream().toList()))
+            .toList();
+
+        List<ShareGroupStatePartitionMetadataValue.TopicInfo> deletingTopicsInfo = deletingTopics.entrySet().stream()
+            .map(entry -> new ShareGroupStatePartitionMetadataValue.TopicInfo()
+                .setTopicId(entry.getKey())
+                .setTopicName(entry.getValue()))
+            .toList();
+
+        return CoordinatorRecord.record(
+            new ShareGroupStatePartitionMetadataKey()
+                .setGroupId(groupId),
             new ApiMessageAndVersion(
-                new ShareGroupCurrentMemberAssignmentKey()
-                    .setGroupId(groupId)
-                    .setMemberId(memberId),
-                CoordinatorRecordType.SHARE_GROUP_CURRENT_MEMBER_ASSIGNMENT.id()
-            ),
-            null // Tombstone
+                new ShareGroupStatePartitionMetadataValue()
+                    .setInitializingTopics(initializingTopicPartitionInfo)
+                    .setInitializedTopics(initializedTopicPartitionInfo)
+                    .setDeletingTopics(deletingTopicsInfo),
+                (short) 0
+            )
         );
     }
 
