@@ -16,15 +16,16 @@
  */
 package org.apache.kafka.coordinator.group.streams.assignor;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 
 /**
- * The task assignment for a Streams group member.
+ * The task assignment for a streams group member.
  *
- * @param activeTasks The target tasks assigned to this member keyed by subtopologyId.
+ * @param activeTasks  The active tasks assigned to this member keyed by subtopologyId.
+ * @param standbyTasks The standby tasks assigned to this member keyed by subtopologyId.
+ * @param warmupTasks  The warm-up tasks assigned to this member keyed by subtopologyId.
  */
 public record MemberAssignment(Map<String, Set<Integer>> activeTasks,
                                Map<String, Set<Integer>> standbyTasks,
@@ -37,6 +38,6 @@ public record MemberAssignment(Map<String, Set<Integer>> activeTasks,
     }
 
     public static MemberAssignment empty() {
-        return new MemberAssignment(Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap());
+        return new MemberAssignment(Map.of(), Map.of(), Map.of());
     }
 }
