@@ -36,7 +36,6 @@ import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.Optional;
 import java.util.Set;
 
@@ -56,20 +55,28 @@ public class FileQuorumStateStoreTest {
         final int voter1 = 1;
         final int voter2 = 2;
         final int voter3 = 3;
+        ReplicaKey votedKey = ReplicaKey.of(voter1, Uuid.randomUuid());
         Set<Integer> voters = Set.of(voter1, voter2, voter3);
 
         stateStore.writeElectionState(
-            ElectionState.withElectedLeader(epoch, voter1, voters),
+            ElectionState.withElectedLeader(epoch, voter1, Optional.of(votedKey), voters),
             kraftVersion
         );
 
         final Optional<ElectionState> expected;
         if (kraftVersion.isReconfigSupported()) {
             expected = Optional.of(
-                ElectionState.withElectedLeader(epoch, voter1, Collections.emptySet())
+                ElectionState.withElectedLeader(epoch, voter1, Optional.of(votedKey), Set.of())
             );
         } else {
-            expected = Optional.of(ElectionState.withElectedLeader(epoch, voter1, voters));
+            expected = Optional.of(
+                ElectionState.withElectedLeader(
+                    epoch,
+                    voter1,
+                    Optional.of(ReplicaKey.of(voter1, ReplicaKey.NO_DIRECTORY_ID)),
+                    voters
+                )
+            );
         }
 
         assertEquals(expected, stateStore.readElectionState());
@@ -100,7 +107,7 @@ public class FileQuorumStateStoreTest {
                 ElectionState.withVotedCandidate(
                     epoch,
                     voter1Key,
-                    Collections.emptySet()
+                    Set.of()
                 )
             );
         } else {
@@ -132,7 +139,7 @@ public class FileQuorumStateStoreTest {
 
         final Optional<ElectionState> expected;
         if (kraftVersion.isReconfigSupported()) {
-            expected = Optional.of(ElectionState.withUnknownLeader(epoch, Collections.emptySet()));
+            expected = Optional.of(ElectionState.withUnknownLeader(epoch, Set.of()));
         } else {
             expected = Optional.of(ElectionState.withUnknownLeader(epoch, voters));
         }
@@ -154,7 +161,7 @@ public class FileQuorumStateStoreTest {
         // Check that state is persisted
         FileQuorumStateStore reloadedStore = new FileQuorumStateStore(stateFile);
         assertEquals(
-            Optional.of(ElectionState.withUnknownLeader(epoch, Collections.emptySet())),
+            Optional.of(ElectionState.withUnknownLeader(epoch, Set.of())),
             reloadedStore.readElectionState()
         );
     }
